Fix template scss files

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -2103,7 +2103,7 @@ dropdown-item
 Custom-select
 ******************/
 .custom-select{
-    background: url(../images/custom-select.png) right .75rem center no-repeat;
+    background: url(../static/images/custom-select.png) right .75rem center no-repeat;
 }
 /*******************
 textarea
