--- a/styles/pages.scss
+++ b/styles/pages.scss
@@ -3355,8 +3355,8 @@ $color_charade_approx: #2a3035;
 $color_vivid_tangerine_approx: $themecolor;
 $color_cerulean_approx: #00aeef;
 //urls
-$url_0: url(../../assets/images/tooltip/tooltip1.svg);
-$url_1: url(../../assets/images/tooltip/shape1.svg);
+// $url_0: url(../static/images/tooltip/tooltip1.svg);
+// $url_1: url(../static/images/tooltip/shape1.svg);
 //@extend-elements
 //original selectors
 //.mytooltip:hover .tooltip-content2, .mytooltip:hover .tooltip-content2 i
@@ -3573,13 +3573,13 @@ $url_1: url(../../assets/images/tooltip/shape1.svg);
     margin: -7px 0 0 -15px;
     width: 30px;
     height: 20px;
-    background: $url_0 no-repeat center center;
+    // background: $url_0 no-repeat center center;
     background-size: 100%;
 }
 
 .tooltip-content3 {
     position: absolute;
-    background: $url_1 no-repeat center bottom;
+    // background: $url_1 no-repeat center bottom;
     background-size: 100% 100%;
     z-index: 9999;
     width: 200px;
