--- a/styles/style.scss
+++ b/styles/style.scss
@@ -18,17 +18,18 @@ File: scss
  *	7. Widgets
  *	8. Custom Templates
  */
-
+@import '~bootstrap/scss/bootstrap.scss';
 @import 'variable';
 @import 'app';
 @import 'pages';
 @import 'sidebar';
+@import 'navbar';
 @import './icons/font-awesome/css/font-awesome.min.css';
-@import './icons/simple-line-icons/css/simple-line-icons.css';
-@import './icons/weather-icons/css/weather-icons.min.css';
-@import './icons/linea-icons/linea.css';
+// @import './icons/simple-line-icons/css/simple-line-icons.css';
+// @import './icons/weather-icons/css/weather-icons.min.css';
+// @import './icons/linea-icons/linea.css';
 @import './icons/themify-icons/themify-icons.css';
-@import './icons/flag-icon-css/flag-icon.min.css';
+// @import './icons/flag-icon-css/flag-icon.min.css';
 @import "./icons/material-design-iconic-font/css/materialdesignicons.min.css";
 @import 'widgets';
 @import 'grid';
